--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,14 @@ apply plugin: 'java'
 
 // Apply the application plugin to add support for building an application
 apply plugin: 'application'
+archivesBaseName = "ceaser-cipher"
+version = '1.0'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
@@ -24,9 +26,9 @@ dependencies {
     compile 'com.google.guava:guava:23.0'
 
     // Use JUnit test framework
-    testCompile 'junit:junit:4.12'
+    testCompile group 'junit', name: 'junit', version:'4.12'
 }
 
 // Define the main class for the application
-mainClassName = 'App'
+mainClassName = "Ceaser-Cipher"
 
