--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile 'com.google.guava:guava:23.0'
 
     // Use JUnit test framework
-    testCompile group 'junit', name: 'junit', version:'4.12'
+    testCompile group: 'junit', name: 'junit', version:'4.12'
 }
 
 // Define the main class for the application
